--- a/BookStoreApp/src/app/public/public.component.html
+++ b/BookStoreApp/src/app/public/public.component.html
@@ -1,1 +1,5 @@
+
+<a routerLink="/public/book-details/{{4}}/author/{{34}}">details</a>
+<a [routerLink]="['/public/book-details', '4', 'author', '34']">details</a>
+
 <router-outlet></router-outlet>
