get and pass query string param

--- a/BookStoreApp/src/app/app.component.html
+++ b/BookStoreApp/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 <a routerLink="about-us">about Us</a>
 <a routerLink="how-it-works">how it works</a>
-<a routerLink="auth/login">login</a>
+<a routerLink="auth/login" [queryParams]="{name: 'good', email: email1}">login</a>
 <a routerLink="public/all-books">All books</a>
 <a [routerLink]="['public/book-details/', id, 'author', authorId]">details from App</a>
 
