Navigate to a Url from component file

--- a/BookStoreApp/src/app/auth/components/login/login.component.html
+++ b/BookStoreApp/src/app/auth/components/login/login.component.html
@@ -1,3 +1,6 @@
 <p>login works!</p>
 <p>name : {{name}}</p>
 <p>email : {{email}}</p>
+
+<button (click)="goToSignup()">signup</button>
+<button (click)="goToBookDetails()">book details</button>
