--- a/BookStoreApp/src/app/app.component.html
+++ b/BookStoreApp/src/app/app.component.html
@@ -1,3 +1,14 @@
+<div class="container-fluid shadom-md">
+    <header class="d-flex justify-content-center py-3">
+      <ul class="nav nav-pills">
+        <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+      </ul>
+    </header>
+  </div>
 
 <a routerLink="about-us">about Us</a>
 <a routerLink="how-it-works">how it works</a>
