--- a/BookStoreApp/src/app/shared/components/toolbar/toolbar.component.html
+++ b/BookStoreApp/src/app/shared/components/toolbar/toolbar.component.html
@@ -1,15 +1,26 @@
 <p>
-    <mat-toolbar color="primary">
-      <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-        <mat-icon>menu</mat-icon>
-      </button>
-      <span>My App</span>
-      <span class="example-spacer"></span>
-      <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-        <mat-icon>favorite</mat-icon>
-      </button>
-      <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-        <mat-icon>share</mat-icon>
-      </button>
-    </mat-toolbar>
-  </p>
+  <mat-toolbar color="primary">
+
+    <!--<button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+      <mat-icon>menu</mat-icon>
+    </button>-->
+    
+    <span>Book Store</span>
+    <span class="example-spacer"></span>
+    <button mat-icon-button class="example-icon favorite-icon" routerLink="/">
+      <mat-icon>home</mat-icon>
+    </button>
+    <button mat-button routerLink="books">All Books</button>
+    <span class="example-spacer"></span>
+    <button mat-button>Login</button>
+    <button mat-button>Signup</button>
+
+    <!--<button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+      <mat-icon>favorite</mat-icon>
+    </button>
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+      <mat-icon>share</mat-icon>
+    </button>-->
+    
+  </mat-toolbar>
+</p>
