--- a/BookStoreApp/src/app/books/components/all-books/all-books.component.html
+++ b/BookStoreApp/src/app/books/components/all-books/all-books.component.html
@@ -1,3 +1,30 @@
-<p>all-books works!</p>
+<h1>Books</h1>
 
-<a routerLink="/books/1">Go to all books</a>
+<div class="container">
+
+    <mat-card class="example-card" *ngFor="let book of listBooks">
+        <mat-card-header>
+            <mat-card-title>{{book.title}}</mat-card-title>
+            <!--<div mat-card-avatar class="example-header-image"></div>
+          <mat-card-title>Shiba Inu</mat-card-title>
+          <mat-card-subtitle>Dog Breed</mat-card-subtitle>-->
+        </mat-card-header>
+        
+        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-content>
+          <p>
+            Total Pages :{{book.totalPages}}
+          </p>
+          <p>
+            Author : {{book.author}}
+          </p>
+          <p>Price : {{book.price.value + ' ' + book.price.currency}}</p>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-button>Details</button>
+          <button mat-button>SHARE</button>
+        </mat-card-actions>
+      </mat-card>
+
+</div>
+  
