--- a/BookStoreApp/src/app/books/components/all-books/all-books.component.scss
+++ b/BookStoreApp/src/app/books/components/all-books/all-books.component.scss
@@ -1,5 +1,6 @@
 .example-card {
-    max-width: 400px;
+    max-width: 350px;
+    margin: 50px;
   }
   
   .example-header-image {
@@ -9,5 +10,10 @@
 
   .container{
     display: flex;
-    padding: 10px;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .container>* {
+    flex: 1 1 350px
   }
