--- a/BookStoreApp/src/app/books/components/all-books/all-books.component.html
+++ b/BookStoreApp/src/app/books/components/all-books/all-books.component.html
@@ -1,5 +1,9 @@
 <h1>Books</h1>
 
+<p>Value : {{_counterService.counter}}</p>
+<button (click)="incFunction()">Increment</button>
+<button (click)="decFunction()">Decrement</button>
+
 <div class="container">
 
     <mat-card class="example-card" *ngFor="let book of listBooks">
