--- a/BookStoreApp/src/app/public-components/home/home.component.html
+++ b/BookStoreApp/src/app/public-components/home/home.component.html
@@ -1,1 +1,5 @@
 <p>home works!</p>
+
+<p>Value : {{_counterService.counter}}</p>
+<button (click)="incFunction()">Increment</button>
+<button (click)="decFunction()">Decrement</button>
