--- a/BookStoreApp/src/app/books/components/book-child/book-child.component.html
+++ b/BookStoreApp/src/app/books/components/book-child/book-child.component.html
@@ -1,16 +1,9 @@
-<h1> All Books</h1>
-
-<a routerLink="recent">Recent Books</a>
-
-<p>Value : {{_counterService.counter}}</p>
-<button (click)="incFunction()">Increment</button>
-<button (click)="decFunction()">Decrement</button>
+<p>book-child works!</p>
 
 
-<!--
 <div class="container">
 
-    <mat-card class="example-card" *ngFor="let book of listBooks">
+    <mat-card class="example-card" *ngFor="let book of data">
         <mat-card-header>
             <mat-card-title>{{book.title}}</mat-card-title>
         </mat-card-header>
@@ -32,7 +25,3 @@
       </mat-card>
 
 </div>
-
--->
-
-<app-book-child [data]="listBooks"></app-book-child>
