--- a/BookStoreApp/src/app/books/components/recent-books/recent-books.component.html
+++ b/BookStoreApp/src/app/books/components/recent-books/recent-books.component.html
@@ -1,16 +1,11 @@
-<h1> All Books</h1>
+<h1>recent-books works!</h1>
 
-<a routerLink="recent">Recent Books</a>
-
-<p>Value : {{_counterService.counter}}</p>
-<button (click)="incFunction()">Increment</button>
-<button (click)="decFunction()">Decrement</button>
-
+<app-book-child [data]="listRecentBooks"></app-book-child>
 
 <!--
-<div class="container">
+  <div class="container">
 
-    <mat-card class="example-card" *ngFor="let book of listBooks">
+    <mat-card class="example-card" *ngFor="let book of listRecentBooks">
         <mat-card-header>
             <mat-card-title>{{book.title}}</mat-card-title>
         </mat-card-header>
@@ -32,7 +27,5 @@
       </mat-card>
 
 </div>
-
 -->
 
-<app-book-child [data]="listBooks"></app-book-child>
