passing data  from parent to child using viewChild

--- a/BookStoreApp/src/app/public-components/home/home.component.html
+++ b/BookStoreApp/src/app/public-components/home/home.component.html
@@ -4,9 +4,9 @@
 <button (click)="incFunction()">Increment</button>
 <button (click)="decFunction()">Decrement</button>
 
-<button (click)="authors.setData(25)">Pass Data to child</button>
+<!--<button (click)="authors.setData(25)">Pass Data to child</button>-->
 
 
 <!--<app-authors [data]="_counterService.counter"></app-authors>-->
 
-<app-authors #authors></app-authors>
+<app-authors></app-authors>
