--- a/BookStoreApp/src/app/shared/components/authors/authors.component.html
+++ b/BookStoreApp/src/app/shared/components/authors/authors.component.html
@@ -1,3 +1,5 @@
 <p>authors works!</p>
 
-<p>Data coming from parent -- : {{data}}</p>
+<!--<p>Data coming from parent -- : {{data}}</p>-->
+<button (click)="myClick()">Click me</button>
+<p>Data coming from child -- : {{myData}}</p>
