--- a/BookStoreApp/src/app/public-components/home/home.component.html
+++ b/BookStoreApp/src/app/public-components/home/home.component.html
@@ -12,3 +12,7 @@
 <h3>Authors</h3>
 
 <app-authors (myData)="takeData($event)"></app-authors>
+
+<app-about-us></app-about-us>
+
+<p>Data from about-us Component : {{testService.testVar}}</p>
