ngOnChanges and ngOnInit hooks

--- a/BookStoreApp/src/app/public-components/home/home.component.html
+++ b/BookStoreApp/src/app/public-components/home/home.component.html
@@ -1,18 +1,4 @@
-<p>home works!</p>
+<p>home parent works!</p>
 
-<!--
-<p>Value : {{_counterService.counter}}</p>
-<button (click)="incFunction()">Increment</button>
-<button (click)="decFunction()">Decrement</button>
--->
-
-<!--<button (click)="authors.setData(25)">Pass Data to child</button>-->
-<!--<app-authors [data]="_counterService.counter"></app-authors>-->
-
-<h3>Authors</h3>
-
-<app-authors (myData)="takeData($event)"></app-authors>
-
-<app-about-us></app-about-us>
-
-<p>Data from about-us Component : {{testService.testVar}}</p>
+<button (click)="counter()">Click Parent</button>
+<app-authors [myData1]="count" [myData2]="count1"></app-authors>
