--- a/BookStoreApp/src/app/shared/components/authors/authors.component.html
+++ b/BookStoreApp/src/app/shared/components/authors/authors.component.html
@@ -1,5 +1,4 @@
-<p>authors works!</p>
+<p>authors child works!</p>
 
-<!--<p>Data coming from parent -- : {{data}}</p>-->
-<button (click)="myClick()">Click me</button>
-<p>Data coming from child -- : {{myData}}</p>
+<p>Data number From parent : {{myData1}}</p>
+<p>Data boolean From parent : {{myData2}}</p>
