--- a/BookStoreApp/src/app/public-components/home/home.component.html
+++ b/BookStoreApp/src/app/public-components/home/home.component.html
@@ -1,4 +1,4 @@
 <p>home parent works!</p>
 
 <button (click)="counter()">Click Parent</button>
-<app-authors [myData1]="count" [myData2]="count1"></app-authors>
+<app-authors [myData1]="count" [myData2]="count1" [myData3] = "obj"></app-authors>
