--- a/BookStoreApp/src/app/shared/components/authors/authors.component.html
+++ b/BookStoreApp/src/app/shared/components/authors/authors.component.html
@@ -2,3 +2,9 @@
 
 <p>Data number From parent : {{myData1}}</p>
 <p>Data boolean From parent : {{myData2}}</p>
+
+<p>
+    Details of Author : <br>
+    Id : {{myData3.id}} <br>
+    Name : {{myData3.name}}
+</p>
