--- a/BookStoreApp/src/app/shared/components/authors/authors.component.html
+++ b/BookStoreApp/src/app/shared/components/authors/authors.component.html
@@ -1,10 +1,14 @@
-<p>authors child works!</p>
+<div class="child-comp">
+  <p>authors child works!</p>
 
-<p>Data number From parent : {{myData1}}</p>
-<p>Data boolean From parent : {{myData2}}</p>
+  <p>Data number From parent : {{ myData1 }}</p>
+  <p>Data boolean From parent : {{ myData2 }}</p>
 
-<p>
-    Details of Author : <br>
-    Id : {{myData3.id}} <br>
-    Name : {{myData3.name}}
-</p>
+  <p>
+    Details of Author : <br />
+    Id : {{ myData3.id }} <br />
+    Name : {{ myData3.name }}
+  </p>
+
+  <ng-content></ng-content>
+</div>
