--- a/BookStoreApp/src/app/shared/components/authors/authors.component.html
+++ b/BookStoreApp/src/app/shared/components/authors/authors.component.html
@@ -1,6 +1,8 @@
 <div class="child-comp">
   <p>authors child works!</p>
 
+  <button (click)="incCounter()">Clik number : {{childCounter}}</button>
+
   <p>Data number From parent : {{ myData1 }}</p>
   <p>Data boolean From parent : {{ myData2 }}</p>
 
